# src/Digdir.Domain.Dialogporten.Domain/Dialogs/Entities/Content/DialogContentType.cs
@@ -12,50 +12,56 @@ public class DialogContentType : AbstractLookupEntity<DialogContentType, DialogC
         SenderName = 2,
         Summary = 3,
         AdditionalInfo = 4,
-        ExtendedStatus = 5
+        ExtendedStatus = 5,
+        MainContentReference = 6
     }
 
     public bool Required { get; private init; }
-    public bool RenderAsHtml { get; private init; }
     public bool OutputInList { get; private init; }
     public int MaxLength { get; private init; }
+
+    // This has to be nullable in order to have empty array as default value
+    public List<string>? AllowedMediaTypes { get; init; }
 
     public override DialogContentType MapValue(Values id) => id switch
     {
         Values.Title => new(id)
         {
             Required = true,
-            RenderAsHtml = false,
             MaxLength = Constants.DefaultMaxStringLength,
-            OutputInList = true
+            OutputInList = true,
         },
         Values.SenderName => new(id)
         {
             Required = false,
-            RenderAsHtml = false,
             MaxLength = Constants.DefaultMaxStringLength,
-            OutputInList = true
+            OutputInList = true,
         },
         Values.Summary => new(id)
         {
             Required = true,
-            RenderAsHtml = false,
             MaxLength = Constants.DefaultMaxStringLength,
-            OutputInList = true
+            OutputInList = true,
         },
         Values.AdditionalInfo => new(id)
         {
             Required = false,
-            RenderAsHtml = true,
             MaxLength = 1023,
-            OutputInList = false
+            OutputInList = false,
+            AllowedMediaTypes = [MediaTypes.Html, MediaTypes.PlainText, MediaTypes.Markdown]
         },
         Values.ExtendedStatus => new(id)
         {
             Required = false,
-            RenderAsHtml = false,
             MaxLength = 20,
-            OutputInList = true
+            OutputInList = true,
+        },
+        Values.MainContentReference => new(id)
+        {
+            Required = false,
+            MaxLength = 1023,
+            OutputInList = false,
+            AllowedMediaTypes = [MediaTypes.EmbeddableMarkdown]
         },
         _ => throw new ArgumentOutOfRangeException(nameof(id), id, null)
     };
