# src/Digdir.Domain.Dialogporten.Domain/Dialogs/Entities/Elements/DialogElementUrl.cs
@@ -9,7 +9,6 @@ public class DialogElementUrl : IEntity
     public DateTimeOffset UpdatedAt { get; set; }
 
     public Uri Url { get; set; } = null!;
-    public string? MediaType { get; set; }
 
     // === Dependent relationships ===
     public DialogElementUrlConsumerType.Values ConsumerTypeId { get; set; }
